Addresses several code smells revealed by static analysis.
Refs #96440